frontend/src/styles/_uswds-theme-custom-styles.scss
/* ... */
#user-control {
  .usa-button {
    font-size: 0.88rem;
  }
  .usa-nav__submenu-item {
    border-top: 0;
  }
}

.usa-select:disabled {
  color: #76766a;
  background-color: white;
  border-color: #e6e6e2;
  background-image: none; // Removes the dropdown arrow icon

  &:hover,
  &:active,
  &:focus {
    color: #76766a;
    background-color: white;
    border-color: #e6e6e2;
    background-image: none;
  }
}

// force scrolling on some search filters
.usa-accordion__heading.force-scrolling {
  position: relative;
  z-index: 1;
}
.usa-accordion__content.force-scrolling {
  position: relative;
  @include u-maxh("mobile-lg");
  overflow-y: auto;
}

// override skipnav's hardcoded `z-index:100`
.usa-skipnav {
  z-index: z-index("top");
}

.simpler-summary-box-yellow {
  background-color: color("yellow-5v");
  border-color: color("orange-30v");
}

// shared opportunity styles
// https://www.figma.com/design/bQUTJCMj0JYbAAnJQ4p4tX/Grantee-Designs-%7C-Quad-5-%7C-Simpler-Grants-2026?node-id=2741-59715&t=1CauPpl4XzKK9eoF-4
.share-opportunity-modal .usa-modal__main {
  margin: 0;
}
.share-opportunity-item--disabled,
.share-opportunity-item--disabled .usa-checkbox {
  background-color: #f0f0f0;
  opacity: 0.8;
}

.share-opportunity-checkboxes .usa-checkbox__label {
  margin-top: 0;
}

// Saved Opportunities Tags
.saved-opportunity-tags {
  position: relative;

  &__list {
    display: flex;
    flex-wrap: nowrap;
    overflow-x: auto;
    padding-bottom: 0.25rem;
    -webkit-overflow-scrolling: touch;
  }

  &__item {
    flex: 0 0 auto;
  }

  &::after {
    content: "";
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    width: 1rem;
    pointer-events: none;
    background: linear-gradient(to right, transparent, white);
  }

  @include at-media("tablet") {
    &__list {
      flex-wrap: wrap;
      overflow-x: visible;
    }

    // We hide the gradient fade on larger screens since the tags wrap instead of overflow.
    &::after {
      display: none;
    }
  }
}

// Prevent SPA's persistent focus for mouse users
@supports selector(:focus-visible) {
  // Selectors need more specificity than:
  // input:not([disabled]):focus,
  // select:not([disabled]):focus,
  // textarea:not([disabled]):focus,
  // button:not([disabled]):focus,
  // iframe:focus,
  // [href]:focus,
  // [tabindex]:focus,
  // [contentEditable="true"]:focus

  .usa-button:not([disabled]),
  .usa-nav__primary-item > a,
  .usa-nav__primary-item > button,
  .usa-accordion__button:not([disabled]) {
    &:focus {
      outline-width: 0;
    }

    &:focus-visible {
      outline-width: units($theme-focus-width);
    }
  }

  // Checkbox & radio focus styles are applied to pseudo elements and need their own rules
  .usa-checkbox__input,
  .usa-radio__input {
    &:focus + [class*="__label"]::before {
      outline-width: 0;
    }
    &:focus-visible + [class*="__label"]::before {
      outline-width: units($theme-focus-width);
    }
  }
}

